cmake_minimum_required(VERSION 3.21)
project(PROG2400_701_Lectures)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_EXE_LINKER_FLAGS "-static")

add_executable(echo echo/main.cpp)
add_executable(commandline commandline/main.cpp)
add_executable(stringstream stringstream/main.cpp)
add_executable(dynamic_arrays dynamic_arrays/main.cpp)
add_executable(craptor dynamic_arrays/craptor.cpp)
add_executable(linkedlist linkedlist/main.cpp linkedlist/linkedlist.cpp linkedlist/linkedlist.h)
add_executable(queues queues/main.cpp)
add_executable(stacks stacks/main.cpp stacks/stack.cpp stacks/grade.cpp)
add_executable(streams streams/main.cpp)
add_executable(palindrome palindrome/main.cpp)
add_executable(recursion recursion/main.cpp)
add_executable(factorial factorial/main.cpp)
add_executable(binarysearchtree binarysearchtree/main.cpp)
add_executable(regex regex/main.cpp)
add_executable(bubblesort bubblesort/main.cpp)
add_executable(selectionsort selectionsort/main.cpp)
add_executable(insertionsort insertionsort/main.cpp)
add_executable(shellsort shellsort/main.cpp)
add_executable(quicksort quicksort/main.cpp)
add_executable(bstsort bstsort/main.cpp)